--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11301,7 +11301,7 @@ body,
 
 /* ----------------------------------------------------------------------------- */
 
-#console-screen {
+.console-screen {
   font-family: "VT323", monospace;
 }
 
@@ -11320,19 +11320,8 @@ body,
     height: 358px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 150px;
-  }
-
-  .modal button {
-    width: 50px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11351,19 +11340,8 @@ body,
     height: 389px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 100%;
-  }
-
-  .modal button {
-    width: 50px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11382,19 +11360,8 @@ body,
     height: 421px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 100%;
-  }
-
-  .modal button {
-    width: 50px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11413,19 +11380,8 @@ body,
     height: 460px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 200px;
-  }
-
-  .modal button {
-    width: 90px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11444,19 +11400,8 @@ body,
     height: 524px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 200px;
-  }
-
-  .modal button {
-    width: 100px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11475,19 +11420,8 @@ body,
     height: 550px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 240px;
-  }
-
-  .modal button {
-    width: 150px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11506,19 +11440,8 @@ body,
     height: 600px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 280px;
-  }
-
-  .modal button {
-    width: 130px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 5px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11537,19 +11460,8 @@ body,
     height: 652px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 290px;
-  }
-
-  .modal button {
-    width: 140px;
-    min-height: 60px;
-    font-size: 10px;
-    margin: 7px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 }
 
@@ -11568,18 +11480,8 @@ body,
     height: 704px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 280px;
-  }
-
-  .modal button {
-    width: 140px;
-    min-height: 60px;
-    margin: 10px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 
   .modal-ingame {
@@ -11602,18 +11504,8 @@ body,
     height: 807px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 350px;
-  }
-
-  .modal button {
-    width: 170px;
-    min-height: 60px;
-    margin: 10px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 
   .modal-ingame {
@@ -11636,18 +11528,8 @@ body,
     height: 935px;
   }
 
-  #console-screen {
+  .console-screen {
     width: 350px;
-  }
-
-  .modal button {
-    width: 170px;
-    min-height: 60px;
-    margin: 10px;
-    color: white !important;
-    border: 1px solid white;
-    border-radius: 30px;
-    font-size: small;
   }
 
   .modal-ingame {
@@ -11776,13 +11658,34 @@ body,
     border-radius: 30px;
 } */
 
-#console-screen {
-  border: 4px solid white;
-  border-radius: 0px;
+.console-screen {
+  box-shadow: 0 0 12px 0 rgba(255, 255, 255, 0.3882352941);
+  border: 1px solid rgba(255, 255, 255, 0.3490196078);
+  border-radius: 8px;
   /* width: 350px; */
   margin: 30px 30px 30px 30px;
   padding-bottom: 40px;
+  transition: 0.5s ease;
   margin-top: 10px;
+  animation: pulse 2s infinite;
+}
+
+.console-screen:hover {
+  box-shadow: 0 0 16px 0 rgba(255, 255, 255, 0.5803921569);
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.3);
+  }
+
+  90% {
+    box-shadow: 0 0 1px 15px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
 }
 
 #myModalkoo6 {
@@ -11810,6 +11713,7 @@ body,
 
 .modal-content {
   background-color: black;
+  box-shadow: 0 0 11px 2px #000000;
   /* box-shadow: 10px 10px purple; */
   /* border-radius: 30px; */
   margin: 15% auto;
