--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -791,6 +791,8 @@ body, .centratore {
 .pepar{
     margin-top: 40px !important;
     background-color:black;
+    padding: 30px;
+    border-radius: 20px;
     background:
     linear-gradient(
       rgba(0, 0, 0, 1),
@@ -870,7 +872,9 @@ body, .centratore {
     /* box-shadow: 10px 10px purple; */
     /* border-radius: 30px; */
     margin: 15% auto;
-    padding: 20px;
+    /* padding: 20px; */
+    padding: 30px;
+    border-radius: 20px;
     /* border: 8px solid BLACK; */
     /* width: 280px; */
     height: fit-content;
