--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -309,7 +309,7 @@ body, .centratore {
 
 .refresh-button{
     width: 100%;
-    border: 1px solid #a9a9a9;
+    border: 1px solid #515151;
 }
 
 #scarabeo {
