hide overflow acount and modal pages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10944,7 +10944,6 @@ html {
   height: 100%;
   margin: 0px;
   background-color: black;
-  /* overflow: hidden; */
   font-family: "Poppins", sans-serif;
   /* font-family: 'VT323', monospace ; */
 }
@@ -10962,7 +10961,6 @@ body,
 .centratore {
   background-color: black;
   width: 100vw;
-  height: 100vh;
 }
 
 /* ----------------------------------------------------------------------------- */
@@ -11033,8 +11031,6 @@ body,
   top: 0;
   height: 100%;
   /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
   background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0));
   background-repeat: repeat;
   background-size: 700px;
@@ -11722,6 +11718,7 @@ body,
   /* padding: 20px; */
   padding: 30px;
   border-radius: 20px;
+  min-width: 350px;
   /* border: 8px solid BLACK; */
   /* width: 280px; */
   height: -moz-fit-content;
