--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5699,6 +5699,16 @@ a.badge-dark.focus {
   color: #040505;
 }
 
+@-webkit-keyframes progress-bar-stripes {
+  from {
+    background-position: 1rem 0;
+  }
+
+  to {
+    background-position: 0 0;
+  }
+}
+
 @keyframes progress-bar-stripes {
   from {
     background-position: 1rem 0;
@@ -5743,12 +5753,14 @@ a.badge-dark.focus {
 }
 
 .progress-bar-animated {
-  animation: 1s linear infinite progress-bar-stripes;
+  -webkit-animation: 1s linear infinite progress-bar-stripes;
+          animation: 1s linear infinite progress-bar-stripes;
 }
 
 @media (prefers-reduced-motion: reduce) {
   .progress-bar-animated {
-    animation: none;
+    -webkit-animation: none;
+            animation: none;
   }
 }
 
@@ -6275,6 +6287,7 @@ a.close.disabled {
 .modal-dialog-centered::before {
   display: block;
   height: calc(100vh - 1rem);
+  height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
   content: "";
@@ -6394,6 +6407,7 @@ a.close.disabled {
 
   .modal-dialog-centered::before {
     height: calc(100vh - 3.5rem);
+    height: -webkit-min-content;
     height: -moz-min-content;
     height: min-content;
   }
@@ -6744,7 +6758,8 @@ a.close.disabled {
   float: left;
   width: 100%;
   margin-right: -100%;
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   transition: transform 0.6s ease-in-out;
 }
 
@@ -6910,6 +6925,12 @@ a.close.disabled {
   text-align: center;
 }
 
+@-webkit-keyframes spinner-border {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes spinner-border {
   to {
     transform: rotate(360deg);
@@ -6924,13 +6945,25 @@ a.close.disabled {
   border: 0.25em solid currentcolor;
   border-right-color: transparent;
   border-radius: 50%;
-  animation: 0.75s linear infinite spinner-border;
+  -webkit-animation: 0.75s linear infinite spinner-border;
+          animation: 0.75s linear infinite spinner-border;
 }
 
 .spinner-border-sm {
   width: 1rem;
   height: 1rem;
   border-width: 0.2em;
+}
+
+@-webkit-keyframes spinner-grow {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    opacity: 1;
+    transform: none;
+  }
 }
 
 @keyframes spinner-grow {
@@ -6952,7 +6985,8 @@ a.close.disabled {
   background-color: currentcolor;
   border-radius: 50%;
   opacity: 0;
-  animation: 0.75s linear infinite spinner-grow;
+  -webkit-animation: 0.75s linear infinite spinner-grow;
+          animation: 0.75s linear infinite spinner-grow;
 }
 
 .spinner-grow-sm {
@@ -6963,7 +6997,8 @@ a.close.disabled {
 @media (prefers-reduced-motion: reduce) {
   .spinner-border,
   .spinner-grow {
-    animation-duration: 1.5s;
+    -webkit-animation-duration: 1.5s;
+            animation-duration: 1.5s;
   }
 }
 
@@ -11667,11 +11702,26 @@ body,
   padding-bottom: 40px;
   transition: 0.5s ease;
   margin-top: 10px;
-  animation: pulse 3s infinite;
+  -webkit-animation: pulse 3s infinite;
+          animation: pulse 3s infinite;
 }
 
 .console-screen:hover {
   box-shadow: 0 0 16px 0 rgba(255, 255, 255, 0.5803921569);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.3);
+  }
+
+  90% {
+    -webkit-box-shadow: 0 0 1px 10px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
 }
 
 @keyframes pulse {
@@ -11723,6 +11773,7 @@ body,
   min-width: 350px;
   /* border: 8px solid BLACK; */
   /* width: 280px; */
+  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   /* border: 5px solid #FCB341 ; */
@@ -11760,8 +11811,56 @@ body,
 /* ----------------------------------------------------------------------------- */
 
 .shake {
-  animation: shake 0s;
-  animation-iteration-count: infinite;
+  -webkit-animation: shake 0s;
+          animation: shake 0s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes shake {
+  0% {
+    transform: translate(1px, 0px);
+  }
+
+  10% {
+    transform: translate(-1px, 0px);
+  }
+
+  20% {
+    transform: translate(-3px, 0px);
+  }
+
+  30% {
+    transform: translate(3px, 0px);
+  }
+
+  40% {
+    transform: translate(1px, 0px);
+  }
+
+  50% {
+    transform: translate(-1px, 0px);
+  }
+
+  60% {
+    transform: translate(-3px, 0px);
+  }
+
+  70% {
+    transform: translate(3px, 0px);
+  }
+
+  80% {
+    transform: translate(-1px, 0px);
+  }
+
+  90% {
+    transform: translate(1px, 0px);
+  }
+
+  100% {
+    transform: translate(1px, 0px);
+  }
 }
 
 @keyframes shake {
@@ -11807,6 +11906,16 @@ body,
 
   100% {
     transform: translate(1px, 0px);
+  }
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
 
