--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -157,7 +157,7 @@ body, .centratore {
 .allineatore {
     width: 100%;
     /* height: 100%; */
-    margin-bottom: 300px;
+    /* margin-bottom: 300px; */
     /* padding-top: 70px ; */
 }
 
