record redirect to avatar, metamask icon

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11064,7 +11064,7 @@ body,
 .allineatore {
   width: 100%;
   /* height: 100%; */
-  margin-bottom: 300px;
+  /* margin-bottom: 300px; */
   /* padding-top: 70px ; */
 }
 
