Update avatar page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -305,7 +305,7 @@ body, .centratore {
 
 #page4 .record{
     width: 280px ;
-    border:1px solid white;
+    /* border:1px solid white; */
     margin-bottom:10px;
     border-radius: 10px;
 }
