--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,17 +56,14 @@ body, .centratore {
 } */
 
 /* #page2{
+    height: 100vh;
     background:
     linear-gradient(
-    rgba(0, 0, 0, 0.8),
-    rgba(0, 0, 0, 0.8)
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
     ),
     url("images/board/water4.jpg");
     background-repeat: repeat;
-    background-size: 100vw;
-    min-height: 100vw;
-    height: 100%;
-    width: 100%;
     background-position: top;
 } */
 
@@ -127,20 +124,19 @@ body, .centratore {
 
 
 
-#page4{
+#page1 {
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
-    url("images/board/green_nilo.jpg") ;
+    url("images/board/green_nilo2.jpg") ;
+    background-size: 100vh ;
+    background-position: center ;
     background-repeat: repeat ;
-    background-size: 100vw ;
-    background-position: left ;
-    background-size: 800px ;
 }
 
-#page5{
+#page4 , #page5 {
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.4),
