Update menu page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -134,6 +134,7 @@ body, .centratore {
     background-size: 100vh ;
     background-position: center ;
     background-repeat: repeat ;
+    height: 89vh;
 }
 
 #page4 , #page5 {
