--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,17 +55,18 @@ body, .centratore {
     background-size: 300px;
 } */
 
-/* #page2{
-    height: 100vh;
+#page2{
+    min-height: 100vh;
     background:
     linear-gradient(
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.7)
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
     ),
-    url("images/board/water4.jpg");
+    url("images/board/black_forest6.png");
     background-repeat: repeat;
-    background-position: top;
-} */
+    background-position: top ;
+   
+}
 
 
 
