--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,16 +56,18 @@ body, .centratore {
 } */
 
 #page2{
-    min-height: 100vh;
     background:
     linear-gradient(
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)
+      rgba(0, 0, 0, 0.9),
+      rgba(0, 0, 0, 0.9)
     ),
-    url("images/board/black_forest6.png");
-    background-repeat: repeat;
-    background-position: top ;
-   
+    url("images/board/green_nilo2.jpg") ;
+    background-repeat: repeat ;
+    background-size: 100vh ;
+    background-position: center ;
+    height: 89vh;
+
+
 }
 
 
@@ -131,14 +133,14 @@ body, .centratore {
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
-    url("images/board/green_nilo2.jpg") ;
-    background-size: 100vh ;
+    url("images/board/bignilo3.jpg") ;
+    background-size: 550px ;
     background-position: center ;
     background-repeat: repeat ;
     height: 89vh;
 }
 
-#page4 , #page5 {
+#page4 , #page5  {
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.4),
@@ -146,7 +148,6 @@ body, .centratore {
     ),
     url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
-    background-size: 100vh ;
     background-position: center ;
     background-size: 550px ;
 }
