Rank page update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,7 +55,7 @@ body, .centratore {
     background-size: 300px;
 } */
 
-#page2{
+/* #page2{
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.9),
@@ -66,9 +66,7 @@ body, .centratore {
     background-size: 100vh ;
     background-position: center ;
     height: 89vh;
-
-
-}
+} */
 
 
 
