Rank page update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,18 +55,17 @@ body, .centratore {
     background-size: 300px;
 } */
 
-/* #page2{
+#page2{
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.9),
       rgba(0, 0, 0, 0.9)
     ),
-    url("images/board/green_nilo2.jpg") ;
+    url("images/board/black_forest6.png") ;
     background-repeat: repeat ;
-    background-size: 100vh ;
-    background-position: center ;
+    background-position: top ;
     height: 89vh;
-} */
+}
 
 
 
