--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,7 +55,7 @@ body, .centratore {
     background-size: 300px;
 } */
 
-#page2{
+/* #page2 {
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.9),
@@ -66,7 +66,7 @@ body, .centratore {
     background-position: top ;
     height: 89vh;
 }
-
+ */
 
 
 
@@ -83,14 +83,14 @@ body, .centratore {
 }
 
 
-#page3{
+/* #page3{
     background:
     linear-gradient(
-    rgba(0, 0, 0, 1),
-    rgba(0, 0, 0, 1)
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.4)
     ),
     url("images/board/water4.jpg");
-}
+} */
 
 .modal {
     display: none; /* Hidden by default */
