--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -320,7 +320,7 @@ body, .centratore {
 
 .refresh-button{
     width: 100%;
-    border: 1px solid #515151;
+    border: 1px solid black;
 }
 
 #scarabeo {
