Avatar page initial style update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -137,7 +137,7 @@ body, .centratore {
     height: 89vh;
 }
 
-#page4 , #page5 {
+/* #page4 , */ #page5 {
     background:
     linear-gradient(
       rgba(0, 0, 0, 0.4),
