--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -173,7 +173,13 @@ body, .centratore {
     background-size: 800px;
 } */
 
-
+.avatar-address{
+    border: 1px solid blue;
+    box-shadow: 0 0 6px 1px blue;
+    border-radius: 8px;
+    margin-bottom: 20px !important;
+    margin-top: 15px !important;
+}
 
 
 /* ----------------------------------------------------------------------------- */
