--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -174,7 +174,7 @@ body, .centratore {
 } */
 
 .avatar-address{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     box-shadow: 0 0 6px 1px blue;
     border-radius: 8px;
     margin-bottom: 20px !important;
