Avatar page style update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -157,8 +157,8 @@ body, .centratore {
     ),
     url("images/board/bignilo3.jpg") ;
     background-repeat: repeat ;
-    background-position: top ;
-    background-size: 850px ;
+    background-position: center ;
+    background-size: 1150px ;
 }
 
 /* #page5  {
