Avatar pages for every  wallet_address in Rank page, redirect to Avatar page from Icon

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11088,7 +11088,8 @@ body,
 
 .avatar-address {
   /* border: 1px solid blue; */
-  box-shadow: 0 0 6px 1px blue;
+  /* box-shadow: 0 0 6px 1px blue; */
+  font-size: 30px;
   border-radius: 8px;
   margin-bottom: 20px !important;
   margin-top: 15px !important;
