setup dynamic colors

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -323,6 +323,7 @@ body, .centratore {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background-color:red;
 }
 
 #page2 .record{
