Added polygon ABI_KEY to env․

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11238,6 +11238,7 @@ body,
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  background-color: red;
 }
 
 #page2 .record {
