Fixed utility modal responsive layout for smaller screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -831,6 +831,31 @@ body, .centratore {
 }
 
 /* ----------------------------------------------------------------------------- */
+/* ----------------------- UTILITY MODALS RESPONSIVE --------------------------- */
+/* ----------------------------------------------------------------------------- */
+
+@media screen and (max-width: 415px) {
+    .modal-content {
+        min-width: 300px;
+        .main_modal & .main_message {
+            font-size: 14px;
+        }
+    }
+}
+
+@media screen and (max-width: 315px) {
+    .modal-content {
+        min-width: 250px;
+    }
+}
+
+@media screen and (max-width: 277px) {
+    .main_modal .modal-content .main_message  {
+        font-size: 12px;
+    }
+}
+
+/* ----------------------------------------------------------------------------- */
 /* ---------------------- LED LIGHT FEATURE ------------------------------------ */
 /* ----------------------------------------------------------------------------- */
 
