MODAL REFACTOR style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -785,7 +785,7 @@ body, .centratore {
     border-radius: 8px;
     /* width: 350px; */
     margin: 30px 30px 30px 30px;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
     transition: 0.5s ease;
     margin-top: 10px;
     animation: pulse 3s infinite;
