--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -749,7 +749,7 @@ body, .centratore {
     }
 
     .connect-modal-content {
-        height: 380px !important;
+        //height: 380px !important;
     }
 }
 
