info page responsive update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -715,7 +715,7 @@ body, .centratore {
     )
 }
 
-@media screen and (min-width: 350px) and (min-height: 550px){
+@media screen and (min-width: 350px) {
     .pepar{
         width: 350px;
         /* height: 450px; */
