--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);
+@charset "UTF-8";
 
 /*!
  * Bootstrap v4.6.2 (https://getbootstrap.com/)
@@ -500,7 +501,7 @@ mark,
 }
 
 .blockquote-footer::before {
-  content: "\2014\A0";
+  content: "— ";
 }
 
 .img-fluid {
@@ -3979,7 +3980,8 @@ input[type=button].btn-block {
   display: block;
   min-height: 1.44rem;
   padding-left: 1.5rem;
-  print-color-adjust: exact;
+  -webkit-print-color-adjust: exact;
+          print-color-adjust: exact;
 }
 
 .custom-control-inline {
@@ -11040,7 +11042,7 @@ body,
 }
 
 .modal-ingame {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/bignilo3.jpg?f59feddceecdafca8ecaff8ca2dd9179);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/bignilo3.jpg?56a02c6de7d378ed37c8ac7ac96fda3b);
   background-repeat: repeat;
   background-position: center;
   background-size: 600px;
@@ -11061,7 +11063,7 @@ body,
 
 #page5,
 #page1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/bignilo3.jpg?f59feddceecdafca8ecaff8ca2dd9179);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/bignilo3.jpg?56a02c6de7d378ed37c8ac7ac96fda3b);
   background-repeat: repeat;
   background-position: top;
   background-size: 550px;
@@ -11983,4 +11985,5 @@ body,
 .fa-gamepad:before {
   color: white;
 }
+
 
