Menu page + Info page update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -260,6 +260,10 @@ body, .centratore {
     height: 25px;
 }
 
+.bt #buttton_info {
+    width: 54px;
+}
+
 .bt #buttton_v_2 {
     height: 35px;
 }
@@ -362,6 +366,9 @@ body, .centratore {
     }
     .bt #buttton_v_1 {
         height: 20px;
+    }
+    .bt #buttton_info {
+        width: 41px;
     }
     .bt {
         margin-bottom: -45px;
